--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
           </address>
         </div>
         <div class="footer-soc-left">
-          <h2 class="footer-soc-title">приєднуйтесь</h2>
+          <p class="footer-soc-title">приєднуйтесь</p>
           <ul class="footer-soc-list list">
             <li class="footer-soc-item">
               <a href="" class="footer-soc-link link">
@@ -570,7 +570,7 @@
           </ul>
         </div>
         <div class="footer-join">
-          <h2 class="footer-join-title">Підпишіться на розсилку</h2>
+          <p class="footer-join-title">Підпишіться на розсилку</p>
           <form class="footer-join-form">
             <input
               type="email"
