--- a/portfolio.html
+++ b/portfolio.html
@@ -322,7 +322,7 @@
           </address>
         </div>
         <div class="footer-soc-left">
-          <h2 class="footer-soc-title">приєднуйтесь</h2>
+          <p class="footer-soc-title">приєднуйтесь</p>
           <ul class="footer-soc-list list">
             <li class="footer-soc-item">
               <a href="" class="footer-soc-link link">
@@ -355,7 +355,7 @@
           </ul>
         </div>
         <div class="footer-join">
-          <h2 class="footer-join-title">Підпишіться на розсилку</h2>
+          <p class="footer-join-title">Підпишіться на розсилку</p>
           <form class="footer-join-form">
             <input
               type="email"
