--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
             </span>
           </label>
           <div class="modal-field">
-            <label for="user-comment" class="input-label">Коментар</label>
+            <label for="user-comment" class="input-label-text">Коментар</label>
             <textarea
               name="user-comment"
               id="user-comment"
@@ -644,7 +644,7 @@
               placeholder="Введіть текст"
             ></textarea>
           </div>
-          
+
           <label class="modal-checkbox">
             <input
               type="checkbox"
@@ -657,7 +657,9 @@
                 <use href="./images/icons.svg#icon-check"></use>
               </svg>
             </span>
-            <span class="modal-checkbox-text">Погоджуюся з розсилкою та приймаю</span>
+            <span class="modal-checkbox-text"
+              >Погоджуюся з розсилкою та приймаю</span
+            >
             <a href="#" class="modal-checkbox-link">Умови договору</a>
           </label>
           <button type="submit" class="modal-btn">Відправити</button>
